--- a/meshiterro/app/views/layouts/application.html.erb
+++ b/meshiterro/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <p>善良な市民同士で無差別に食欲を煽るSNS</p>
+            <p>善良な市民同士で無差別に飲食欲を煽るSNS</p>
             <%= image_tag('logo-white.png') %>
           </div>
           <div class="col-md-8">
